# gitbucket-mcp-server-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  README.md  RELEASE.md  SPEC.md  TESTING.md  VERIFICATION.md
.github/workflows/: ci.yml  e2e.yml  release.yml
docker/e2e/: compose.yaml
scripts/e2e/: bootstrap.sh  common.sh  down.sh
scripts/release/: create_tag.sh
skills/gitbucket-mcp/: SKILL.md
skills/gitbucket-mcp/agents/: openai.yaml
src/: config.rs  error.rs  lib.rs  main.rs  server.rs  test_support.rs
src/api/: adapter.rs  client.rs  issue.rs  label.rs  milestone.rs  mod.rs  pull_request.rs  repository.rs  user.rs  web.rs
src/models/: comment.rs  issue.rs  label.rs  milestone.rs  mod.rs  pull_request.rs  repository.rs  user.rs
src/tools/: issue.rs  label.rs  milestone.rs  mod.rs  pull_request.rs  repository.rs  response.rs  user.rs  validation.rs
tests/: api_client_test.rs  e2e_test.rs  mcp_server_test.rs
tests/common/: mod.rs
